--- a/Viral/index.html
+++ b/Viral/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="UTF-8">
-	<title>Arigato</title>
+	<title>Viral</title>
 	<link rel="stylesheet" href="css/libs.min.css">
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.5/jquery.fancybox.min.css" />
@@ -17,6 +17,7 @@
 <div id="particles">
 	<div id="intro">
 		<h1><img src="img/Viral-logo.svg" alt=""></h1>
+		<h2>STARTS IN OCTOBER 2018</h2>
 	</div>
 </div>
 <script src="js/libs.min.js"></script>
